2005-03-13 Bogdan Gheorghe
	Updated references to IndexManager to reflect new indexing framework.
	
2005-02-03 Tanya Wolff
	Fixed some content assist regression tests.
	Added Regression tests (content assist, refactoring) to automated suite for nightly builds
	* ui/org.eclipse.cdt.ui.tests/AutomatedSuite.java
	* ui/org.eclipse.cdt.ui.tests.regression/ContentAssistRegressionTests.java

2004-12-17 Tanya Wolff
	Added more Content Assist Regression tests

2004-12-10 Alain Magloire
	No need for TestBufferTest test, it is now in JFace.

2004-11-16 Andrew Niefer
	- created package ui/org.eclipse.ui.tests.regression 
	- moved ContentAssistRegressionTests to it and created a RefactoringRegressionTests
	- created a RegressionTestUISuite

2004-11-08 Mikhail Voronin
	New tests for help extension.
	* ui/org/eclipse/cdt/ui/tests/chelp/CHelpProviderTester.java
	* ui/org/eclipse/cdt/ui/tests/chelp/CHelpTest.java
	* ui/org/eclipse/cdt/ui/tests/chelp/CHelpTestInfoProvider.java

2004-11-02 Tanya Wolff
	added content assist regression tests
	*ui.tests.text.contentassist/ContentAssistRegressionTests.java
	
2004-05-11 Andrew Niefer
	Renamed CompletionFailedTest_ScopedReference_ConstructorDefinition to CompletionTest_VariableType_NestedPrefix
	Modified expected results for CompletionTest_ConstructorReference

2004-04-30 Hoda Amer
	Added CompletionFailedTest_ScopedReference_ConstructorDefinition
	Added CompletionTest_ScopedReference_NonCodeScope
	
2004-04-12 Hoda Amer
	Updated CompletionFailedTest_ScopedReference_NoPrefix_Bug50152, renamed it to CompletionTest_ScopedReference_NoPrefix and moved it out of the failed tests folder.
	
2004-04-07 John Camelon
	Updated CompletionFailedTest_ConstructorReference_Bug50808, renamed it to CompletionTest_ConstructorReference and moved it out of the failed tests folder.
	Updated CompletionFailedTest_TypeDef_Bug52948, renamed it to CompletionTest_TypeDef_Prefix and moved it out of the failed tests folder.